<resources>
    <string name="app_name">JIIT Timer</string>
    <string name="action_settings">Settings</string>
    <string name="choose_your_program">Choose your Program:</string>

    <string name="work_time">Work Time:</string>
    <string name="rest_time">Rest Time:</string>
    <string name="cycles">Cycles:</string>
    <string name="cooldown_time">Cooldown Time:</string>
    <string name="go">GO!</string>
    <string name="default_start_time">00:00</string>
    <string name="default_start_cycles">0</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="save_as_new">Save As New...</string>

    <string name="tag_workout_time_field" translatable="false">WORKOUT_TIME</string>
    <string name="tag_rest_time_field" translatable="false">REST_TIME</string>
    <string name="tag_cooldown_time_field" translatable="false">COOLDOWN_TIME</string>
    <string name="tag_cycles_field" translatable="false">CYCLES</string>

</resources>
