<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/programList_spinner"
            android:layout_width="@dimen/program_spinner_width"
            android:layout_height="@dimen/program_spinner_height"
            android:layout_marginStart="@dimen/normal_margin"
            android:entries="@array/default_hiit_programs"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/save_as_new"
            android:textSize="@dimen/save_as_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/workoutSettings_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/programList_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/workoutSettings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/programList_spinner">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:labelFor="@+id/workTime_edit"
                android:text="@string/work_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/workTime_edit"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:digits="0123456789:"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/default_start_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/workTimePlus_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/plus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/workTime_edit"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/workTimeLess_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/minus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/workTimePlus_button"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:labelFor="@+id/restTime_edit"
                android:text="@string/rest_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workTime_edit" />

            <EditText
                android:id="@+id/restTime_edit"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/default_start_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/restTimePlus_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/plus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/restTime_edit"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/restTimeLess_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/minus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/restTimePlus_button"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/cycles_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:labelFor="@+id/cycles_edit"
                android:text="@string/cycles"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restTime_edit" />

            <EditText
                android:id="@+id/cycles_edit"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/default_start_cycles"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cycles_text" />

            <Button
                android:id="@+id/cyclesPlus_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/plus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintEnd_toEndOf="@id/restTimePlus_button"
                app:layout_constraintTop_toBottomOf="@+id/cycles_text" />

            <Button
                android:id="@+id/cyclesLess_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/plus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintEnd_toEndOf="@id/restTimeLess_button"
                app:layout_constraintTop_toBottomOf="@+id/cycles_text" />

            <TextView
                android:id="@+id/cooldown_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:labelFor="@+id/coolDownTime_edit"
                android:text="@string/cooldown_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cycles_edit" />

            <EditText
                android:id="@+id/coolDownTime_edit"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:digits="0123456789:"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/default_start_time"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cooldown_text" />

            <Button
                android:id="@+id/cooldownPlus_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/plus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/coolDownTime_edit"
                app:layout_constraintTop_toBottomOf="@+id/cooldown_text" />

            <Button
                android:id="@+id/cooldownLess_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginStart="@dimen/big_margin"
                android:text="@string/minus_symbol"
                android:textSize="@dimen/settings_text_size"
                app:layout_constraintStart_toEndOf="@id/cooldownPlus_button"
                app:layout_constraintTop_toBottomOf="@+id/cooldown_text" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/go"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutSettings_layout" />


        <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cycleCountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:text="4/20"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/sessionTimeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:text="8:32"
                        android:textSize="30sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6">

                        <TextView
                            android:id="@+id/cycleTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="READY"
                            android:textSize="96sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/goButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="clickGoButton"
                            android:text="GO!"
                            android:textSize="36sp" />

                        <Button
                            android:id="@+id/stopButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="clickStopButton"
                            android:text="Stop!"
                            android:textSize="36sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            -->

    </android.support.constraint.ConstraintLayout>
</layout>